--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const { title } = Astro.props;
     <head>
         <meta charset="UTF-8" />
         <title>{title}</title>
+        <meta name="description" content="Discover the breathtaking Ha Giang Loop with our guided group tours. Immerse yourself in stunning landscapes, vibrant ethnic cultures, and thrilling motorbike adventures. Book your unforgettable journey today!">
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
