--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,10 +3,10 @@ import Logo from '../components/Logo.astro';
 
 const navItems = [
     { linkText: 'Home', href: '/' },
-    { linkText: 'Revalidation', href: '/revalidation' },
-    { linkText: 'Image CDN', href: '/image-cdn' },
-    { linkText: 'Edge Function', href: '/edge' },
-    { linkText: 'Blobs', href: '/blobs' }
+    { linkText: 'Ha Giang Group Tour', href: 'https://hagiangvisiontour.com' },
+    { linkText: 'Ha Giang Private Tour', href: 'https://visiontravelagent.com' },
+    { linkText: 'Car & Motorbike Rental', href: 'https://thuexehagiang.com/en/' },
+    { linkText: 'Bus ticket', href: 'https://vexehagiang.com' }
 ];
 ---
 
