--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,6 @@
 
 <footer class="pt-16 pb-12 sm:pt-24 sm:pb-16">
     <p class="text-sm">
-        <a href="https://visiontravel.vn" class="decoration-dashed text-primary underline-offset-8"> Vision Travel </a>
+        <a href="https://visiontravel.vn" class="decoration-dashed text-primary underline-offset-8"> Vision Travel </a>|<a href="/hagiang-loop-travel-guides/" class="decoration-dashed text-primary underline-offset-8">Ha Giang Travel Guides </a>
     </p>
 </footer>
