--- a/src/components/ContextAlert.astro
+++ b/src/components/ContextAlert.astro
@@ -4,8 +4,8 @@ import Markdown from './Markdown.astro';
 import { getNetlifyContext } from '../utils';
 
 const noNetlifyContextAlert = `
-For full functionality, either run this site locally via \`netlify dev\`
-([see docs](https://docs.netlify.com/cli/local-development/)) or deploy it to Netlify.
+If you need further \`Ha Giang Loop Tour \` information please visit
+([Ha Giang Vision Tourist JSC](https://visiontravel.vn/)) or contact us via WhatsApp at +84825331983.
 `;
 
 const { addedChecksFunction, class: className } = Astro.props;
