--- a/src/components/ContextAlert.astro
+++ b/src/components/ContextAlert.astro
@@ -4,8 +4,8 @@ import Markdown from './Markdown.astro';
 import { getNetlifyContext } from '../utils';
 
 const noNetlifyContextAlert = `
-If you need further \`Ha Giang Loop Tour \` information please visit
-([Ha Giang Vision Tourist JSC](https://visiontravel.vn/)) or contact us via WhatsApp at +84825331983.
+If you need further ([Ha Giang Loop Group Tour](https://hagiangvisiontour.com/)) information please visit
+([Ha Giang Vision Tourist JSC](https://visiontravel.vn/)) or contact us via WhatsApp at \`+84825331983 \`.
 `;
 
 const { addedChecksFunction, class: className } = Astro.props;
